IGNITE-11461: Automatic modules support for Apache Ignite: locally executed test